# ffmpeg-dump-jpeg

./: .gitignore  Cargo.toml  config.toml
src/: main.rs
src/stream/: mod.rs
